# parameter-golf

./: pyproject.toml  qwen3_original.py  requirements.txt  run.sh  train_gla.py  train_gla_lite.py  train_mamba2.py
